# pytest-select

./: .bumpversion.cfg  .coverage  .flake8  .gitignore  LICENSE  README.rst  pyproject.toml
.circleci/: config.yml
pytest_select/: __init__.py  plugin.py
tests/: test_pytest_select.py
tests/util/: mutmut_get_failed.py
